# agentbin

./: .dockerignore  .gitignore  Dockerfile  README.md  agentbin.sln  nuget.config
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
docs/: _config.yml  a2a-playground.js  compliance-go.html  compliance-java.html  compliance-net.html  compliance-python.html  compliance-rust.html  compliance.html  dashboard-.net.html  dashboard-dotnet.html  dashboard-go.html  dashboard-java.html  dashboard-python.html  dashboard-rust.html  dashboard.html  index.html  index.md  predefined-agents.json  report-card-.net.html  report-card-dotnet.html  report-card-go.html  report-card-java.html  report-card-python.html  report-card-rust.html  report-card.html  tests.html
infra/: main.bicep  main.bicepparam
nupkgs/: A2A.1.0.0-alpha.nupkg  A2A.1.0.0-preview2.nupkg  A2A.1.0.0-preview3.nupkg  A2A.1.0.0-preview3.snupkg  A2A.1.0.0-preview4.nupkg  A2A.1.0.0-preview4.snupkg  A2A.AspNetCore.1.0.0-alpha.nupkg  A2A.AspNetCore.1.0.0-preview2.nupkg  A2A.AspNetCore.1.0.0-preview3.nupkg  A2A.AspNetCore.1.0.0-preview3.snupkg  A2A.AspNetCore.1.0.0-preview4.nupkg  A2A.AspNetCore.1.0.0-preview4.snupkg  A2A.V0_3.1.0.0-preview3.nupkg  A2A.V0_3.1.0.0-preview3.snupkg  A2A.V0_3.1.0.0-preview4.nupkg  A2A.V0_3.1.0.0-preview4.snupkg  A2A.V0_3Compat.1.0.0-preview3.nupkg  (+3 more)
src/AgentBin.Rust/: Cargo.toml  README.md
src/AgentBin.Rust/src/: echo_agent.rs  main.rs  spec_agent.rs
tests/ClientTests/rust/: .gitignore  Cargo.toml  build.rs  results.json  run.py
tests/ClientTests/rust/src/: main.rs
(+207 files in other folders)
