[package]
name = "agentbin-rust"
version = "1.0.0"
edition = "2021"

[dependencies]
a2a-rs-server = "1.0.24"
a2a-rs-core = "1.0.24"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
anyhow = "1"
base64 = "0.22"
