[package]
name = "test_rust_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_rust_client"
path = "src/main.rs"

[dependencies]
a2a-rs-client = "1.0.18"
a2a-rs-core = "1.0.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures-core = "0.3"
anyhow = "1"
